--- a/ourwork.html
+++ b/ourwork.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="web design, proffesional web design, affordable web design">
         <meta name="author" content="Adam Blaine">
         
-        <title>Design Incorporated | About</title>
+        <title>Design Incorporated | Our Work</title>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </head>
